--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,17 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
+# Dependencies
+**/node_modules
+.pnp
+.pnp.js
+
+# Testing
+coverage
+
+# Production
+**/dist
+**/dist-ssr
 *.local
 
 # Editor directories and files
@@ -22,3 +30,16 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Vite
+**/.vite
+
+# Environment files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Build outputs
+**/output.css 
