--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,41 +1,46 @@
 {
-  "name": "nmc",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint ."
-  },
-  "dependencies": {
-    "@radix-ui/react-select": "^2.1.6",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@tanstack/react-query": "^5.0.0",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
-    "leaflet": "^1.9.4",
-    "lucide-react": "^0.475.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-leaflet": "^4.2.1",
-    "react-router-dom": "^6.20.0",
-    "tailwind-merge": "^1.14.0",
-    "tailwindcss-animate": "^1.0.7",
-    "uuid": "^9.0.1"
-  },
-  "devDependencies": {
-    "@types/node": "^20.8.2",
-    "@types/react": "^18.2.25",
-    "@types/react-dom": "^18.2.10",
-    "@vitejs/plugin-react": "^4.1.0",
-    "autoprefixer": "^10.4.16",
-    "eslint": "^8.50.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.3",
-    "vite": "^4.4.9"
-  }
+    "name": "nmc",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build",
+        "lint": "eslint ."
+    },
+    "dependencies": {
+        "@radix-ui/react-dialog": "^1.1.6",
+        "@radix-ui/react-select": "^2.1.6",
+        "@radix-ui/react-slot": "^1.0.2",
+        "@tanstack/react-query": "^5.0.0",
+        "apexcharts": "^4.5.0",
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^2.0.0",
+        "leaflet": "^1.9.4",
+        "lucide-react": "^0.475.0",
+        "react": "^18.2.0",
+        "react-apexcharts": "^1.7.0",
+        "react-dom": "^18.2.0",
+        "react-icons": "^5.5.0",
+        "react-leaflet": "^4.2.1",
+        "react-router-dom": "^6.20.0",
+        "recharts": "^2.15.1",
+        "tailwind-merge": "^1.14.0",
+        "tailwindcss-animate": "^1.0.7",
+        "uuid": "^9.0.1"
+    },
+    "devDependencies": {
+        "@types/node": "^20.8.2",
+        "@types/react": "^18.2.25",
+        "@types/react-dom": "^18.2.10",
+        "@vitejs/plugin-react": "^4.1.0",
+        "autoprefixer": "^10.4.16",
+        "eslint": "^8.50.0",
+        "eslint-plugin-react": "^7.33.2",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "eslint-plugin-react-refresh": "^0.4.3",
+        "postcss": "^8.4.31",
+        "tailwindcss": "^3.3.3",
+        "vite": "^4.4.9"
+    }
 }
