--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "@radix-ui/react-dialog": "^1.1.6",
+        "@radix-ui/react-dropdown-menu": "^2.1.6",
         "@radix-ui/react-select": "^2.1.6",
         "@radix-ui/react-slot": "^1.0.2",
         "@tanstack/react-query": "^5.0.0",
@@ -18,6 +19,7 @@
         "clsx": "^2.0.0",
         "leaflet": "^1.9.4",
         "lucide-react": "^0.475.0",
+        "prop-types": "^15.8.1",
         "react": "^18.2.0",
         "react-apexcharts": "^1.7.0",
         "react-dom": "^18.2.0",
@@ -25,6 +27,7 @@
         "react-leaflet": "^4.2.1",
         "react-router-dom": "^6.20.0",
         "recharts": "^2.15.1",
+        "shadcn-ui": "^0.9.4",
         "tailwind-merge": "^1.14.0",
         "tailwindcss-animate": "^1.0.7",
         "uuid": "^9.0.1"
