--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
         "lint": "eslint ."
     },
     "dependencies": {
+        "@google/generative-ai": "^0.22.0",
         "@radix-ui/react-dialog": "^1.1.6",
         "@radix-ui/react-dropdown-menu": "^2.1.6",
         "@radix-ui/react-select": "^2.1.6",
